# hub

./: .beans.yml  .envrc  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  devenv.nix  devenv.yaml  flake.nix  justfile  test.er
.beads/: config.yaml  metadata.json
.flox/: env.json
.flox/env/: manifest.toml
admin/api/: Cargo.toml
admin/web/: Cargo.toml
apps/echo_link/: Cargo.toml
apps/echo_link/src/: lib.rs  proto.rs
apps/echo_sink/: Cargo.toml  build.rs
apps/echo_sink/src/: main.rs
apps/hub/: Cargo.toml
apps/hub/src/: main.rs
cli/: Cargo.toml
config/: Cargo.toml
core/: Cargo.toml
core/src/: config.rs  plugin.rs
crates/core/: Cargo.toml
crates/hub_link/: Cargo.toml  build.rs
crates/hub_link/src/: hub_session.rs
crates/hub_sink/: build.rs
crates/hub_sink/src/: proto.rs
crates/link_hub/: build.rs
crates/link_hub/src/: link_authenticator.rs  proto.rs
crates/sink_hub/: build.rs
crates/sink_hub/src/: proto.rs  sink_app.rs  sink_session.rs
demo/: gleam.toml  manifest.toml
demo/echo_link/: Cargo.toml
demo/echo_link/src/: main.rs
demo/echo_sink/: Cargo.toml  build.rs
demo/echo_sink/src/: proto.rs
demo/grpc_hub/: Cargo.toml
demo/proto/v1/: echo.proto
grpc/demo/echo_hub/: Cargo.toml
grpc/demo/echo_hub/src/: main.rs
grpc/demo/echo_link/: Cargo.toml
grpc/demo/echo_link/src/: main.rs  proto.rs
grpc/demo/echo_sink/: Cargo.toml
grpc/demo/echo_sink/src/: main.rs  proto.rs
grpc/hub_link/: Cargo.toml
grpc/hub_link/src/: lib.rs
grpc/hub_sink/: Cargo.toml
grpc/link/: Cargo.toml  build.rs
grpc/link/src/: proto.rs
grpc/link_hub/: Cargo.toml  build.rs
grpc/link_hub/src/: link_session.rs
grpc/proto/google/rpc/: error_details.proto
grpc/proto/v1/: link.proto  sink.proto
grpc/sink/: Cargo.toml  build.rs
grpc/sink_hub/: Cargo.toml
grpc/sink_hub/src/: error.rs  lib.rs  proto.rs  sink_app.rs  sink_authenticator.rs  sink_hub.rs  sink_session.rs
http/activity/: Cargo.toml  justfile
http/activity/src/: activity.rs  body.rs  error.rs  lib.rs  request.rs  response.rs  session.rs  uri.rs
http/core/: Cargo.toml
http/dispatcher/: Cargo.toml
http/dispatcher/src/: dispatcher.rs  lib.rs
http/dispatcher/src/config/: action.rs  config.rs  mod.rs  rule.rs
http/history/: Cargo.toml
hub/: Cargo.toml  justfile
hub/src/: app.rs  args.rs  config.rs  dispatcher.rs  lib.rs  main.rs
hub/src/proxy/: hudsucker.rs  mod.rs
link_hub/: Cargo.toml
link_hub/src/: error.rs  hub_app.rs  lib.rs  link_authenticator.rs  link_hub.rs  link_session.rs  proto.rs
proto/: README.md
proto/v1/: link.proto  sink.proto
proxy/hudsucker/: Cargo.toml
proxy/hudsucker/src/: config.rs  lib.rs  proxy.rs
sink_hub/: Cargo.toml  build.rs
sink_hub/src/: error.rs  lib.rs  proto.rs  sink_app.rs  sink_hub.rs
