[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/edger-dev/hub"
repository = "https://github.com/edger-dev/hub"

[workspace]
members = [
    "http/core",
    "proxy/hudsucker",
    "grpc/sink",
    "grpc/sink_hub",
    "grpc/link",
    "grpc/link_hub",
    "admin/api",
    "admin/web",
    "hub",
    "grpc/demo/echo_hub",
    "grpc/demo/echo_sink",
    "grpc/demo/echo_link",
]

[workspace.dependencies]
hub_http_core = { path = "http/core" }
hub_proxy_hudsucker = { path = "proxy/hudsucker" }
hub_grpc_link = { path = "grpc/link" }
hub_grpc_link_hub = { path = "grpc/link_hub" }
hub_grpc_sink = { path = "grpc/sink" }
hub_grpc_sink_hub = { path = "grpc/sink_hub" }
hub_admin_api = { path = "admin/api" }
hub_admin_web = { path = "admin/web" }
hub = { path = "hub" }

axum = "0.6.12"
hyper = { version = "0.14.25", features = ["full"] }
tower = { version = "0.4.13", features = ["full"] }
tokio = { version = "1.26.0", features = ["full"] }

tracing = "0.1.37"
snafu = "0.7.4"

clap = { version = "4.1.14", features = [ "derive" ] }
tracing-subscriber = "0.3.16"
