[workspace.package]
edition = "2021"
license = "MIT"
homepage = "https://github.com/edger-dev/hub"
repository = "https://github.com/edger-dev/hub"

[workspace]
members = [
    "http/activity",
    "http/history",
    "http/dispatcher",
    "grpc/sink",
    "grpc/sink_hub",
    "grpc/link",
    "grpc/link_hub",
    "admin/api",
    "admin/web",
    "hub",
    "grpc/demo/echo_hub",
    "grpc/demo/echo_sink",
    "grpc/demo/echo_link",
]
exclude = [
    "patch/*",
]

[workspace.dependencies]
hub_http_activity = { path = "http/activity" }
hub_http_history = { path = "http/history" }
hub_http_dispatcher = { path = "http/dispatcher" }
hub_grpc_link = { path = "grpc/link" }
hub_grpc_link_hub = { path = "grpc/link_hub" }
hub_grpc_sink = { path = "grpc/sink" }
hub_grpc_sink_hub = { path = "grpc/sink_hub" }
hub_admin_api = { path = "admin/api" }
hub_admin_web = { path = "admin/web" }

once_cell = "1.17.1"
http = "0.2.9"
bytes = "1.4.0"
url = "2.3.1"
es = { version = "1.4.0", features = [ "serde" ] }
rkyv = { version = "0.7.42", features = [ "validation", "uuid", "indexmap" ] }
chrono = { version = "0.4.24", features = [ "rkyv", "serde" ] }
indexmap = { version = "1.9.3", features = [ "serde" ] }
tinyvec = "1.6.0"
derivative = "2.2.0"

ractor = "0.8.4"

axum = "0.6.12"
hyper = { version = "0.14.26", features = [ "full" ] }
tower = { version = "0.4.13", features = [ "full" ] }
tokio = { version = "1.28.2", features = [ "full" ] }
tokio-stream = "0.1.14"
async-stream = "0.3.5"
async-trait = "0.1.68"
futures = "0.3.28"
dashmap = "5.4.0"
serde = { version = "1.0.163", features = [ "derive" ] }
secrecy = { version = "0.8.0", features = [ "serde" ] }

tracing = "0.1.37"
snafu = "0.7.4"
uuid = { version = "1.3.3", features = [ "v4", "serde" ] }
clap = { version = "4.3.0", features = [ "derive" ] }
tracing-subscriber = "0.3.17"

reqwest = { version = "0.11.18", default-features = false, features = ["socks", "rustls-tls", "rustls-tls-native-roots", "trust-dns", "json", "gzip", "brotli"] }
globset = "0.4.10"

# proxy begin
rcgen = { version = "0.10.0", features = ["x509-parser", "pem"]}
rustls-pemfile = "1.0.2"
hudsucker = { version = "0.20.0", features = [ "rcgen-ca" ] }
# proxy end

# grpc begin
tonic = { version = "0.9.2", features = [ "tls" ] }
tonic-types = "0.9.2"
tonic-build = { version = "0.9.2", features = [ "prost" ] }

prost = "0.11.9"
prost-types = "0.11.9"
# grpc end

# hub begin
clap-verbosity-flag = "2.0.1"
tracing-log = "0.1.3"
figment = { version = "0.10", features = ["toml", "env"] }
directories = "5.0.1"
bstr = "1.5.0"
# hub end