[package]
name = "hub"
version = "0.1.0"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hub_proxy_hudsucker = { workspace = true }
hub_admin_api = { workspace = true }

tokio = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
clap-verbosity-flag = { workspace = true }
serde = { workspace = true }
secrecy = { workspace = true }
figment = { workspace = true }
directories = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-log = { workspace = true }
