[package]
name = "echo_link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hub_link = { path = "../../grpc/hub_link" }

snafu = "0.7"
tokio = { version = "1.0", features = [ "full" ] }
tokio-stream = "0.1"
tonic = { version = "0.6", features = [ "tls", "compression" ] }
tonic-types = "0.4"
prost = "0.9"
prost-types = "0.9"
futures = "0.3"
uuid = { version = "0.8", features = [ "v4" ] }
clap = { version = "3", features = [ "derive" ] }

[build-dependencies]
tonic-build = { version = "0.6", features = ["prost", "compression"] }
