[package]
name = "grpc_hub"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
link_hub = { path = "../../grpc/link_hub" }
sink_hub = { path = "../../grpc/sink_hub" }

snafu = "0.7"
tokio = { version = "1.0", features = [ "full" ] }
tonic = { version = "0.6", features = [ "tls", "compression" ] }
futures = "0.3"
clap = { version = "3", features = [ "derive" ] }