[package]
name = "hub_grpc_sink"
version = "0.1.0"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
snafu = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
futures = { workspace = true }
async-stream = { workspace = true }
serde = { workspace = true }
dashmap = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }