[package]
name = "hub_http_dispatcher"
version = "0.1.0"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = { workspace = true }
snafu = { workspace = true }
globset = { workspace = true }
http = { workspace = true }
url = { workspace = true }
reqwest = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true }
derivative = { workspace = true }
serde = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
