[package]
name = "hub_http_history"
version = "0.1.0"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = { workspace = true }
dashmap = { workspace = true }
rkyv = { workspace = true, optional = true }
serde = { workspace = true, optional = true }