[package]
name = "echo_hub"
publish = false
version = "0.0.0"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hub_grpc_link_hub = { workspace = true }
hub_grpc_sink_hub = { workspace = true }

snafu = "0.7"
tokio = { version = "1.0", features = [ "full" ] }
tonic = { version = "0.6", features = [ "tls", "compression" ] }
futures = "0.3"
clap = { version = "3", features = [ "derive" ] }