[package]
name = "echo_link"
publish = false
version = "0.0.0"

edition = { workspace = true }
license = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hub_grpc_link = { workspace = true }

snafu = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tonic = { workspace = true }
tonic-types = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
